# hello-world

./: .wr.toml  LICENSE
Rust/: Cargo.toml  README.md  Types.md
Rust/exercises/02_basic_calculator/02_variables/src/: lib.rs
Rust/exercises/02_basic_calculator/04_panics/src/: lib.rs
Rust/exercises/02_basic_calculator/05_factorial/src/: lib.rs
Rust/exercises/02_basic_calculator/06_while/src/: lib.rs
Rust/exercises/02_basic_calculator/07_for/src/: lib.rs
Rust/exercises/02_basic_calculator/08_overflow/src/: lib.rs
Rust/exercises/02_basic_calculator/09_saturating/src/: lib.rs
Rust/exercises/02_basic_calculator/10_as_casting/src/: lib.rs
Rust/exercises/03_ticket_v1/01_struct/src/: lib.rs
Rust/exercises/03_ticket_v1/02_validation/src/: lib.rs
Rust/exercises/03_ticket_v1/03_modules/src/: lib.rs
Rust/exercises/03_ticket_v1/04_visibility/src/: lib.rs
Rust/exercises/03_ticket_v1/05_encapsulation/src/: lib.rs
Rust/exercises/03_ticket_v1/06_ownership/src/: lib.rs
Rust/exercises/03_ticket_v1/07_setters/src/: lib.rs
Rust/exercises/03_ticket_v1/08_stack/src/: lib.rs
Rust/exercises/03_ticket_v1/09_heap/src/: lib.rs
Rust/exercises/03_ticket_v1/10_references_in_memory/src/: lib.rs
Rust/exercises/03_ticket_v1/11_destructor/src/: lib.rs
Rust/exercises/03_ticket_v1/12_outro/src/: lib.rs
Rust/exercises/04_traits/01_trait/src/: lib.rs
Rust/exercises/04_traits/02_orphan_rule/src/: lib.rs
Rust/exercises/05_ticket_v2/11_dependencies/: Cargo.toml
Rust/exercises/05_ticket_v2/12_thiserror/: Cargo.toml
Rust/exercises/05_ticket_v2/15_outro/: Cargo.toml
(+66 files in other folders)
