# Profile settings can be changed in Cargo.toml with the [profile] table.

[profile.dev]
opt-level = 1               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.

[profile.release]
overflow-checks = true     # Enable integer overflow checks.


[workspace]
members = [
  "exercises/*/*",
  "helpers/common",
  "helpers/mdbook-exercise-linker",
  "helpers/mdbook-link-shortener",
  "helpers/ticket_fields",
]
resolver = "2"

# This is needed to guarantee the expected behaviour on that specific exercise,
# regardless of the "global" setting for `overflow-checks` on the `dev` profile.
[profile.dev.package.copy]
overflow-checks = true
